# bpax

./: LICENSE  README.md  package.json  pnpm-workspace.yaml  tsconfig.base.json
cli/: package.json
cli/src/: cli.ts  index.ts
cli/src/commands/: generate.ts  init.ts  validate.ts
examples/: lead-qualification.bpax.json  minimal.bpax.json
sdk/python/: pyproject.toml
sdk/python/src/bpax/: __init__.py
sdk/typescript/: package.json
sdk/typescript/src/: index.ts
sdk/typescript/src/parser/: index.ts
sdk/typescript/src/types/: index.ts
sdk/typescript/src/utils/: cost-estimator.ts  graph-builder.ts
sdk/typescript/src/validator/: index.ts
spec/: README.md
spec/0.1-alpha/: CHANGELOG.md  bpax.schema.json
tests/conformance/: test-manifest.json
tests/conformance/invalid/: invalid-step-type.json  missing-bpax-version.json
tests/conformance/valid/: minimal.json
