[project]
name = "bpax"
version = "0.1.0-alpha"
description = "BPAX - Business Process Agent eXchange SDK for Python"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "BPAX Contributors" }
]
keywords = ["bpax", "agentic", "workflow", "business-process", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]
langgraph = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
]
crewai = [
    "crewai>=0.55.0",
]
openai = [
    "openai>=1.30.0",
]

[project.scripts]
bpax = "bpax.cli.main:app"

[project.urls]
Homepage = "https://bpax.io"
Repository = "https://github.com/bpax-io/bpax"
Documentation = "https://bpax.io/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bpax"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
